modify : 노드 조회 시 projectIdx 조건 포함하여 조회하도록 변경